package com.example.bookcollectionapp.common

object TestTags {
    const val SEARCH_FIELD = "SEARCH_FIELD"
    const val SORT_SECTION = "SORT_SECTION"
    const val ORDER_TYPE_TITLE_ASC = "Title A-Z"
    const val ORDER_TYPE_TITLE_DESC = "Title Z-A"
    const val ORDER_TYPE_DATE_ASC = "Least Recent"
    const val ORDER_TYPE_DATE_DESC = "Most Recent"
    const val FILTER_SECTION = "FILTER_SECTION"

    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val AUTHOR_TEXT_FIELD = "AUTHOR_TEXT_FIELD"
    const val PUBLISHER_TEXT_FIELD = "PUBLISHER_TEXT_FIELD"
    const val GENRE_TEXT_FIELD = "GENRE_TEXT_FIELD"
    const val READING_STATUS_TEXT_FIELD = "READING_STATUS_TEXT_FIELD"
...
