...
                    .background(MaterialTheme.colors.background)
                    .padding(top = 10.dp),
                horizontalArrangement = Arrangement.SpaceBetween,
                verticalAlignment = Alignment.CenterVertically
            ) {
                OutlinedTextField(
                    value = state.searchQuery,
                    textStyle = TextStyle(fontSize = 13.sp),
                    onValueChange = { query ->
                        viewModel.onEvent(BookListEvent.OnSearchQueryChange(query))
                    },
                    modifier = Modifier
                        .testTag(TestTags.SEARCH_FIELD)
...
                            onClick = {
                                viewModel.onEvent(BookListEvent.ToggleSortSection)
                            }
                        ) {
                            Icon(
                                painter = painterResource(id = R.drawable.ic_sort),
                                contentDescription = "Sort")
                        }
                    },
                    leadingIcon = {
                        Icon(
                            imageVector = Icons.Default.Search,
                            contentDescription = "Search"
...
